# stBO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  common.py  ex01_global_then_qucb.py  ex02_prior_mean.py  ex03_local_then_finetune.py  ex04_fixed_features.py  fixed_feature_rosenbrock2d.py  global_bo_rosenbrock2d.py  local_bo_rosenbrock2d.py  prior_mean_assisted_bo_rosenbrock2d.py  rosenbrock_prior.py  run_example_from_notebook.ipynb
src/stbo/: __init__.py  config.py
src/stbo/acquisition/: ramping.py
src/stbo/models/: priors.py
src/stbo/optimization/: __init__.py  controller.py  trust_region.py
src/stbo/oracles/: __init__.py  rosenbrock.py
src/stbo/utils/: sampling.py
stbo/acquisition/: __init__.py  base.py
stbo/models/: __init__.py  gp_wrapper.py
stbo/utils/: __init__.py  costs.py
tests/: test_smoke_examples.py
