[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stBO"
version = "0.1.0"
description = "Single-task Bayesian Optimization with physics-aware ramping costs (BoTorch-based)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "torch>=2.0",
  "botorch>=0.10.0",
  "gpytorch>=1.11",
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.3.0",
  "mypy>=1.6",
  "pre-commit>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
